--- a/src/components/RegistrationModal.css
+++ b/src/components/RegistrationModal.css
@@ -52,6 +52,11 @@
   font-size: 1rem;
 }
 
+input:disabled,
+select:disabled {
+  background-color: #f0efef;
+}
+
 .input-wrapper {
   position: relative;
 }
